# calculator

./: CMakeLists.txt
.github/workflows/: calculator.yml
adder/: CMakeLists.txt
adder/src/: addition.cpp
divider/: CMakeLists.txt
divider/src/: division.cpp
main/src/: main.cpp
printer/: CMakeLists.txt
printer/src/: print_result.cpp
